Line spacing bug fix

--- a/styles/results/_DesktopSectionPanel.scss
+++ b/styles/results/_DesktopSectionPanel.scss
@@ -65,8 +65,6 @@
       width: 25%;
     }
 
-    line-height: 12px;
-
     & span:nth-child(3) {
       font-style: italic;
     }
